# Setup configuration for ADSBXCOT.
#
# Copyright Sensors & Signals LLC https://www.snstac.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#


[metadata]
name = adsbxcot
version = attr: adsbxcot.__version__
url = https://github.com/snstac/adsbxcot
project_urls =
  CI: GitHub Actions = https://github.com/snstac/adsbxcot/actions
  GitHub: issues = https://github.com/snstac/adsbxcot/issues
  GitHub: repo = https://github.com/snstac/adsbxcot
  Docs: Changelog = https://adsbxcot.readthedocs.io/en/latest/changelog/
  Docs: RTD = https://adsbxcot.rtfd.io
description = Display Aircraft in TAK. A gateway for displaying aircraft tracks from ADS-B Aggregators (ADSBExchange, adsb.fi, et al.) in TAK Products (ATAK, WinTAK, iTAK, TAK Server, TAKX).
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Greg Albrecht <oss@undef.net>
maintainer_email = oss@undef.net
license = Apache 2
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords = 
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK
  TAK Server
  ADS-B
  Aircraft
  ADSB
  UAT

[options]
python_requires = >=3.6, <4
packages = adsbxcot
package_dir = 
  adsbxcot = adsbxcot
install_requires = 
  pytak >= 6.2.0
  aircot >= 1.2.0
  aiohttp

[options.entry_points]
console_scripts =
    adsbxcot = adsbxcot.commands:main

[options.extras_require]
test = 
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black
